contrast error fix

--- a/web215/styles/default.css
+++ b/web215/styles/default.css
@@ -38,7 +38,7 @@ ul {
   text-align: left;
 }
 a {
-  color: #01a1a1;
+  color: #02a88c;
   font-family: "Comic Neue", serif;
   text-decoration: none;
 }
